# luagi

./: .gitignore  LICENSE  Makefile  README.adoc  README.md  commit.lua  diff.lua  git.lua  index.lua  lgit.c  lgit.h  status.lua  tag.lua  tree_builder.lua  trees.lua  treewalk.lua  wien_helper.lua
cmp/cmake/: CMakeLists.txt  FileLists.cmake
cmp/cmake/modules/: CustomFunctions.cmake  DefineCompilerFlags.cmake  FindGIT2.cmake  FindLua52.cmake
inc/: defines.h
lua/: commit.lua  diff.lua  index.lua  remote.lua  status.lua  trees.lua  treewalk.lua
src/: annotated_commit.c  annotated_commit.h  blame.c  blame.h  blob.c  blob.h  branch.c  branch.h  checkout.c  checkout.h  cherrypick.c  cherrypick.h  clone.c  clone.h  commit.c  commit.h  common.c  common.h  config.c  config.h  diff.c  diff.h  graph.c  graph.h  ignore.c  ignore.h  index.c  index.h  indexer.c  indexer.h  ltk.c  ltk.h  luagi.c  luagi.h  merge.c  merge.h  note.c  note.h  object.c  object.h  (+43 more)
tst/: base.lua  blame.lua  blob.lua  branch.lua  checkout.lua  cherrypick.lua  clone.lua  commit.lua  config.lua  diff.lua  graph.lua  ignore.lua  index.lua  indexer.lua  luagi.lua  merge.lua  note.lua  object.lua  odb.lua  pack.lua  patch.lua  push.lua  refdb.lua  reference.lua  reflog.lua  remote.lua  repo.lua  reset.lua  revert.lua  revwalk.lua  stash.lua  status.lua  submodule.lua  tag.lua  test_helper.lua  transport.lua  tree.lua
tst/data/: README.txt
